# qcheck

./: CHANGELOG.md
.github/workflows/: main.yml
src/core/: QCheck.ml  QCheck2.ml
test/core/: QCheck2_expect_test.ml  QCheck_expect_test.expected.ocaml4.32  QCheck_expect_test.expected.ocaml4.64  QCheck_expect_test.expected.ocaml5.32  QCheck_expect_test.expected.ocaml5.64  QCheck_expect_test.ml  QCheck_tests.ml  dune
